--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -15,10 +15,11 @@ button {
   );
 
   &:hover {
-    outline: 2.7px solid #fff;
+    box-shadow: 0px 0px 0px 3px #fff;
   }
 
   &:focus {
-    outline: 3px solid #fff;
+    box-shadow: 0px 0px 0px 3px #fff;
+  } 
   }
 }
